--- a/Benshi.AI_Assignment/app/src/main/res/values/strings.xml
+++ b/Benshi.AI_Assignment/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Benshi.AI_Assignment</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="posts">Posts</string>
+    <string name="post_Details">Post Details</string>
 </resources>
